--- a/public/styles.css
+++ b/public/styles.css
@@ -1,19 +1,159 @@
 body {
     font-family: sans-serif;
-    background:f5f5f5;
+    background:#f5f5f5;
     padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .container {
-    max-width: 700px;
+    width: 70%;
     margin: auto;
     background: white;
     padding: 2rem;
-    border-radius: 8px;
     box-shadow: 0 0 10px #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
   }
- 
-  h1 {
-    text-align: center;
+
+  .show-container {
+    width: 70%;
+    margin: auto;
+    background: white;
+    padding: 2rem;
+    box-shadow: 0 0 10px #ccc;
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    align-items: baseline;
+    gap: 1.5rem;
+  }
+
+  .span2 {
+    grid-column: span 2;
+  }
+
+  .action {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+  }
+
+  table {
+    width: 100%;
+  }
+
+  table, td, th {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px 10px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .link {
+    text-decoration: none;
+    color: purple;
   }
   
+  .link::before {
+    content: "Add New Proverb";
+    text-decoration: underline;
+  }
+  .btn {
+    border-radius: 0;
+    outline: none;
+    border-width: 2px;
+    border-style: solid;
+    color: black;
+  }
+
+  .btn a {
+    padding: 5px 20px;
+    line-height: 20px;
+  }
+
+  .btn-delete {
+    padding: 3px 20px;
+  }
+
+  .btn-show {
+    border-color: green;
+  }
+
+  .btn-show:hover{
+    background-color: green;
+  }
+
+  .btn-show:hover a {
+    color: white;
+  }
+
+  .btn-edit {
+    border-color: purple;
+    background-color: purple;
+  }
+
+  .btn-edit a {
+    color: white;
+  }
+
+  .btn-edit:hover {
+    background-color: white;
+  }
+
+  .btn-edit:hover a {
+    color: black;
+  }
+
+  .btn-delete {
+    border-color: red;
+    background-color: red;
+    color: white;
+  }
+
+  .btn-delete:hover {
+    background-color: white;
+    color: black;
+  }
+
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 1.5rem;
+    width: 100%;
+  }
+  
+  input {
+    padding: 5px 10px;
+    border-radius: 0;
+    border: 1px solid black;
+  }
+
+  input:focus {
+    outline: 2px solid black;
+    border: none;
+  }
+
+  .form a, .form button {
+    padding: 3px 20px;
+  }
+
+  .group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+  }
+
+  .group label {
+    font-weight: bold;
+    font-size: 12px;
+  }
