--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,17 @@
 <html>
   <head>
     <title>Afghan Proverbs</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="container">
       <h1>All Proverbs</h1>
-      <a href="/proverbs/new">Add New Proverb</a>
+      <a class="link" href="/proverbs/new">&nbsp;&raquo;</a>
       <table>
         <thead>
           <tr>
             <th>ID</th>
             <th>English</th>
-            <th>Pashto</th>
-            <th>Dari</th>
-            <th>Meaning</th>
             <th>Category</th>
             <th>View Details</th>
             <th>Edit</th>
@@ -28,18 +25,21 @@
           <tr>
             <td><%= p.id %></td>
             <td><%= p.translationEn %></td>
-            <td><%= p.textPashto %></td>
-            <td><%= p.textDari %></td>
-            <td><%= p.meaning %></td>
             <td><%= p.category %></td>
-            <td><a href="/proverbs/<%= p.id %>">Show</a></td>
             <td>
-              <a href="/proverbs/<%= p.id %>/edit">Edit</a>
+              <button class="btn btn-show">
+                <a href="/proverbs/<%= p.id %>">Show</a>
+              </button>
+            </td>
+            <td>
+              <button class="btn btn-edit">
+                <a href="/proverbs/<%= p.id %>/edit">Edit</a>
+              </button>
             </td>
 
             <td>
               <form method="POST" action="/proverbs/<%= p.id %>/delete">
-                <button type="submit">Delete</button>
+                <button class="btn btn-delete" type="submit">Delete</button>
               </form>
             </td>
           </tr>
