--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Afghan Proverbs</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <%- include('head') %>
   </head>
   <body>
     <div class="container">
